fix: config to allow forum questions